Fix Dark mode for Form inset background color
Summary:
Replace hardcoded background color for form insets with a variable, e.g. when editing a Herald rule.

Split from D25724 written by mturdus.

Refs T15056

Test Plan:
* Go to http://phorge.localhost/settings/panel/display/ and set `Accessibility` to `Dark Mode (Experimental)`
* Go to e.g. http://phorge.localhost/herald/edit/?content_type=HeraldManiphestTaskAdapter&rule_type=personal

Reviewers: O1 Blessed Committers, mainframe98

Reviewed By: O1 Blessed Committers, mainframe98

Subscribers: tobiaswiese, valerio.bozzolan, Matthew, Cigaryno

Maniphest Tasks: T15056

Differential Revision: https://we.phorge.it/D26342

--- a/webroot/rsrc/css/phui/phui-form-view.css
+++ b/webroot/rsrc/css/phui/phui-form-view.css
@@ -228,7 +228,7 @@ table.aphront-form-control-checkbox-layout th {
 .phui-form-inset {
   margin: 12px 0;
   padding: 8px;
-  background: #f7f9fd;
+  background: {$form-inset-background};
   border: 1px solid {$lightblueborder};
   border-radius: 3px;
 }
